# my-md-reader

./: .gitignore  AGENTS.md  README.md  meson.build
.opencode/agents/: md-reader.md
data/: io.github.pang.mdreader.desktop  io.github.pang.mdreader.gschema.xml  io.github.pang.mdreader.metainfo.xml  meson.build
docs/: ARCHITECTURE.md  DESIGN_SPEC.md  FLATPAK_CONSTRAINTS.md  IMPLEMENTATION_PLAN.md  SESSION_PROMPT.md
scripts/: install.sh
src/: md-reader.in  meson.build
src/mdreader/: __init__.py  __main__.py  application.py  bootstrap.py  window.py
src/mdreader/models/: __init__.py  conversation.py  document.py  file_node.py
src/mdreader/services/: __init__.py  ai_markdown.py  context.py  markdown.py  opencode.py  patches.py  settings.py  themes.py  workspace.py
src/mdreader/widgets/: __init__.py  ai_panel.py  document_view.py  library_sidebar.py  resize_handle.py
src/resources/: io.github.pang.mdreader.gresource.xml  style.css
src/resources/reader/: bridge.js  reader.css
src/resources/ui/: window.blp
tests/: meson.build  smoke_app.py  test_ai_markdown.py  test_context.py  test_markdown.py  test_opencode.py  test_patches.py  test_settings.py  test_themes.py  test_workspace.py
tests/fixtures/: reader-sample.md
